Finished fronts for Breakfast and Lunches
Added several new recipes to lunch and moved a couple to dinner. Also added a few sides.

--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -52,7 +52,7 @@
 										<img src="images/potato-kale-bacon-hash.jpg" alt="" />
 									</span>
                         <a href="recipes/potato-kale-bacon-hash.html">
-                            <h2>Potato Bacon Kale Hash</h2>
+                            <h2>Potato Bacon Spinach Hash</h2>
                             <div class="content">
                                 <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
                             </div>
@@ -154,12 +154,12 @@
                     </article>
                     <article class="lunch2">
                         <span class="image">
-											<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+											<img src="images/greek-yogurt-chicken-salad-sandwich.jpg" alt="" />
 										</span>
-                        <a href="recipes/potato-kale-bacon-hash.html">
-                            <h2>Potato Bacon Kale Hash</h2>
+                        <a href="recipes/greek-yogurt-chicken-salad-sandwich.html">
+                            <h2>GREEK YOGURT CHICKEN SALAD SANDWICH</h2>
                             <div class="content" id="firsty">
-                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                                <p>From the plump grapes to the sweet cranberries, this lightened up sandwich won’t even taste healthy! PROMISE!</p>
                             </div>
                         </a>
                     </article>
@@ -191,19 +191,19 @@
                                             </span>
                         <a href="potato-kale-bacon-hash.html">
                             <h2>"BREADED" PALEO CHICKEN CUTLETS</h2>
-                            <div class="content" id="firsty">
+                            <div class="content">
                                 <p>Crispy "breaded" Paleo Chicken Cutlets that are super easy and just as good as mom used to make.</p>
                             </div>
                         </a>
                     </article>
                     <article class="lunch6">
                         <span class="image">
-                                                <img src="images/sheet-pan-chicken-veggies.jpg" alt="" />
+                                                <img src="images/lunchmeat-roll-ups-with-berries.jpg" alt="" />
                                             </span>
                         <a href="generic.html">
-                            <h2>SHEET PAN CHICKEN WITH VEGGIES</h2>
-                            <div class="content" id="lunch">
-                                <p>This 30 minute sheet pan chicken with veggies has a sweet/savory sauce that's healthy, paleo, and easy to whip up in a blender!</p>
+                            <h2>Lunch meat roll-ups with mixed berries</h2>
+                            <div class="content">
+                                <p>Experiment with turkey slices around avocado, chicken around apple sticks – the possibilities are endless.</p>
                             </div>
                         </a>
                     </article>
@@ -220,12 +220,12 @@
                     </article>
                     <article class="lunch8">
                         <span class="image">
-                                                    <img src="images/bacon-wrapped-pork-tenderloin.jpg" alt="" />
+                                                    <img src="images/healthy-bento-lunches.jpg" alt="" />
                                                 </span>
-                        <a href="potato-kale-bacon-hash.html">
-                            <h2>BACON WRAPPED PORK TENDERLOIN</h2>
-                            <div class="content" id="firsty">
-                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                        <a href="healthy-bento-lunches.html">
+                            <h2>HEALTHY BENTO LUNCHES</h2>
+                            <div class="content">
+                                <p>The backbone of these bento boxes is fresh cut fruit and vegetables.</p>
                             </div>
                         </a>
                     </article>
@@ -257,7 +257,7 @@
                                                     </span>
                         <a href="potato-kale-bacon-hash.html">
                             <h2>Strawberry Chicken &amp; Spinach Wraps</h2>
-                            <div class="content" id="firsty">
+                            <div class="content">
                                 <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
                             </div>
                         </a>
@@ -273,41 +273,74 @@
                             </div>
                         </a>
                     </article>
+                    <article class="lunch9">
+                        <span class="image">
+                                                        <img src="images/watermelon-feta-salad.jpg" alt="" />
+                                                    </span>
+                        <a href="watermelon-feta-salad.html">
+                            <h2>WATERMELON FETA &amp; MINT SALAD</h2>
+                            <div class="content" id="lunch">
+                                <p>When it’s hot outside, this refreshing Watermelon, Feta and Mint salad is a must have.</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch4">
+                        <span class="image">
+                                                        <img src="images/baked-tonkatsu.jpg" alt="" />
+                                                    </span>
+                        <a href="baked-tonkatsu.html">
+                            <h2>Baked Tonkatsu</h2>
+                            <div class="content" id="lunch">
+                                <p>Crispy on the outside and juicy on the inside, this Baked Tonkatsu recipe is a total game changer.</p>
+                            </div>
+                        </a>
+                    </article>
+                    <article class="lunch8">
+                        <span class="image">
+                                                        <img src="images/broiled-grapefruit-brown-sugar-honey.jpg" alt="" />
+                                                    </span>
+                        <a href="broiled-grapefruit-brown-sugar-honey.html">
+                            <h2>BROILED GRAPEFRUIT WITH BROWN SUGAR &amp; HONEY</h2>
+                            <div class="content" id="lunch">
+                                <p>Broiling your grapefruit brings out an insane flavor and heightens your grapefruit experience.</p>
+                            </div>
+                        </a>
+                    </article>
                 </section>
                 <br/>
                 <br/>
 
                 <h1>Dinner</h1>
                 <section class="tiles">
-                    <article class="style1">
+                    <article class="lunch6">
                         <span class="image">
-												<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
-											</span>
-                        <a href="chicken-salad-lettuce-wraps.html">
-                            <h2>Chicken Salad Lettuce Wraps</h2>
-                            <div class="content">
-                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                                                <img src="images/sheet-pan-chicken-veggies.jpg" alt="" />
+                                            </span>
+                        <a href="generic.html">
+                            <h2>SHEET PAN CHICKEN WITH VEGGIES</h2>
+                            <div class="content" >
+                                <p>This 30 minute sheet pan chicken with veggies has a sweet/savory sauce that's healthy, paleo, and easy to whip up in a blender!</p>
                             </div>
                         </a>
                     </article>
-                    <article class="style2">
+                    <article class="lunch8">
                         <span class="image">
-												<img src="images/potato-kale-bacon-hash.jpg" alt="" />
-											</span>
+                                                    <img src="images/bacon-wrapped-pork-tenderloin.jpg" alt="" />
+                                                </span>
                         <a href="potato-kale-bacon-hash.html">
-                            <h2>Potato Bacon Kale Hash</h2>
-                            <div class="content" id="firsty">
+                            <h2>BACON WRAPPED PORK TENDERLOIN</h2>
+                            <div class="content">
                                 <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
                             </div>
                         </a>
                     </article>
-                    <article class="style3">
+                    <article class="lunch3">
                         <span class="image">
-												<img src="images/pic03.jpg" alt="" />
+												<img src="images/easy-french-dip-sliders.jpg" alt="" />
 											</span>
-                        <a href="generic.html">
-                            <h2>Feugiat</h2>
-                            <div class="content">
+                        <a href="easy-french-dip-sliders.html">
+                            <h2>EASY FRENCH DIP SLIDERS</h2>
+                            <div class="content" id="dinner">
                                 <p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
                             </div>
                         </a>
@@ -318,25 +351,25 @@
 
                 <h1>Sides</h1>
                 <section class="tiles">
-                    <article class="style1">
+                    <article class="lunch9">
                         <span class="image">
-													<img src="images/chicken-salad-lettuce-wraps.jpg" alt="" />
+													<img src="images/apple-sandwiches-with-almond-butter-and-granola.jpg" alt="" />
 												</span>
-                        <a href="chicken-salad-lettuce-wraps.html">
-                            <h2>Chicken Salad Lettuce Wraps</h2>
+                        <a href="apple-sandwiches-with-almond-butter-and-granola.html">
+                            <h2>APPLE SANDWICHES WITH ALMOND BUTTER &amp; GRANOLA</h2>
                             <div class="content">
-                                <p>Chicken salad all grown up looks gooood (and makes for amazing leftovers).</p>
+                                <p>MAKE SNACKING SIMPLE WITH THESE 3-INGREDIENT APPLE SANDWICHES WITH ALMOND BUTTER AND GRANOLA.</p>
                             </div>
                         </a>
                     </article>
-                    <article class="style2">
+                    <article class="lunch8">
                         <span class="image">
-													<img src="images/potato-kale-bacon-hash.jpg" alt="" />
+													<img src="images/caramelized-sweet-potato-apple-hash-browns.jpg" alt="" />
 												</span>
-                        <a href="potato-kale-bacon-hash.html">
-                            <h2>Potato Bacon Kale Hash</h2>
+                        <a href="caramelized-sweet-potato-apple-hash-browns.html">
+                            <h2>CARAMELIZED SWEET POTATO APPLE HASH</h2>
                             <div class="content" id="firsty">
-                                <p>A single serve Sweet Potato Bacon Kale Hash that’s healthy, satisfying, and made in one skillet!</p>
+                                <p>With lots of sweet and a bit of savory flavor, these caramelized sweet potato apple hash browns will be your new favorite side dish for any meal.</p>
                             </div>
                         </a>
                     </article>
