--- a/recipes/recipes/potato-kale-bacon-hash.html
+++ b/recipes/recipes/potato-kale-bacon-hash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Potato Bacon Kale Hash</title>
+		<title>Potato Bacon Spinach Hash</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="../assets/css/recipes.css" />
@@ -10,7 +10,7 @@
 		<div id="wrapper">
 					<div id="main">
 						<div class="inner">
-							<h1 id="hcolor"><a href="../recipes.html" class="fa fa-arrow-left" aria-hidden="true"></a> Potato Bacon Kale Hash</h1>
+							<h1 id="hcolor"><a href="../recipes.html" class="fa fa-arrow-left" aria-hidden="true"></a> Potato Bacon Spinach Hash</h1>
 							<div class="row">
 								<span class="6u">
 									<img src="../images/potato-kale-bacon-hash2.jpg"/>
@@ -31,8 +31,8 @@
 									</thead>
 									<tbody>
 									<tr>
-									<td>Small sweet potato</td>
-									<td>1 (small cubes)</td>
+									<td>Tri-color potatos</td>
+									<td>8-9 (hashed cubes)</td>
 									</tr>
 									<tr>
 									<td>Bacon</td>
@@ -43,7 +43,7 @@
 									<td>generous pinch</td>
 									</tr>
 									<tr>
-									<td>Kale</td>
+									<td>Baby spinach</td>
 									<td>handful (roughly chopped)</td>
 									</tr>
 									<tr>
@@ -64,8 +64,8 @@
 									</thead>
 									<tbody>
 											<tr>
-											<td>Tri-color potatos</td>
-											<td>Baby spinach</td>
+											<td>Sweet potato</td>
+											<td>Kale</td>
 											</tr>
 											<tr>
 											<td>Baby Tomatoes</td>
