Attempted to build mobile page
Something in the template CSS is shrinking the font size to super small levels when the page is resized...

--- a/recipes/recipes/basic-granola.html
+++ b/recipes/recipes/basic-granola.html
@@ -19,7 +19,7 @@
 							<span class="6u">
 									<h3 id="scolor">Information</h3>
 									<ul class="alt">
-											<li class="">TOTAL TIME: <span id="infoblck">0:25</span> PREP TIME: <span id="infoblck">0:05</span> COOK TIME: <span id="infoblck">0:15</span> SERVINGS: <span id="infoblck">?</span></li>
+											<li class="">TOTAL TIME: <span id="infoblck">0:30</span> PREP TIME: <span id="infoblck">0:05</span> COOK TIME: <span id="infoblck">0:25</span> SERVINGS: <span id="infoblck">?</span></li>
 										</ul>
 									<div class="table-wrapper">
 									<table>
@@ -40,23 +40,23 @@
 									</tr>
 									<tr>
 									<td>Shredded coconut</td>
-									<td>2 tablespoons</td>
+									<td>4 tablespoons</td>
 									</tr>
 									<tr>
 									<td>Cinnamon</td>
-									<td>1 1/2 teaspoons</td>
+									<td>2 teaspoons</td>
 									</tr>
 									<tr>
 									<td>Oil</td>
-									<td>3  tablespoons</td>
+									<td>4 tablespoons</td>
 									</tr>
 									<tr>
 									<td>Vanilla</td>
-									<td>3/4 teaspoon</td>
+									<td>2 teaspoon</td>
 									</tr>
 									<tr>
 									<td>Honey</td>
-									<td>4 tablespoons</td>
+									<td>5 tablespoons</td>
 									</tr>
 									</tbody>
 									</table>
