Finished JS Weather Feature
Icons, temp, and written weather working. Page size isn't broken(?)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 								<h1 id="greeting">[dynamic greeting], [name] [other]</h1>
 							</header>
 							<div class="content">
-								<i class="wi wi-night-alt-cloudy"></i>
-								<p>It is currently <span id="weather"></span>,<br />
+								<span id="icoo"></span>
+								<p>It is currently <span id="currently"></span>,<br />
 								the time is <span id="time">[time]</span> on <span id="date">[date]</span></p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
@@ -77,23 +77,6 @@
 							</section>
 					</div>
 
-				 <!--Footer 
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Liveware 2017</li>
-							</ul>
-						</div>
-					</footer>
-			</div>-->
-
 		<!-- Scripts -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<script src="assets/js/jquery.min.js"></script>
@@ -102,7 +85,7 @@
 		<script src="assets/js/skel.min.js"></script>
 		<script src="assets/js/util.js"></script>
 		<script src="assets/js/main.js"></script>
-		<script src="assets/js/custom.js"></script>
 		<script src="assets/js/jquery.simpleWeather.js"></script>
+		<script src="assets/js/custom.js"></script>
 	</body>
 </html>
