--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 											</span>
 									<header class="major">
 										<h3><a href="http://app.plex.tv/desktop" class="link">PLEX</a></h3>
-										<p>Plexflix and chill.</p>
+										<p id="tilee">Plexflix and chill.</p>
 									</header>
 								</article>
 								<article>
@@ -53,7 +53,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="recipes/recipes.html" class="link">Recipes</a></h3>
-										<p>A catalouge of healthy recipes. Make, eat, easy.</p>
+										<p id="tilee">A catalouge of healthy recipes. Make, eat, easy.</p>
 									</header>
 								</article>
 								<article>
@@ -62,7 +62,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="wallpaper/index.html" class="link">Wallpapers</a></h3>
-										<p>Give your desktop a makeover!</p>
+										<p id="tilee">Give your desktop a makeover!</p>
 									</header>
 								</article>
 								<article>
@@ -71,7 +71,7 @@
 									</span>
 									<header class="major">
 										<h3><a href="landing.html" class="link">Steam</a></h3>
-										<p>Get your game on!</p>
+										<p id="tilee">Get your game on!</p>
 									</header>
 								</article>
 							</section>
